cmake_minimum_required (VERSION 3.8)

project ("BasicAlgorithms")

# TODO: Move executables to libary and add tests

add_executable (BinarySearch "binary_search.cc")

add_executable (BinaryTreeTraversal "binary_tree_traversal.cc")

add_executable (EnumerateCombination "enumerate_combination.cc")

add_executable (EnumerateCombinationWithRepetition "enumerate_combination_repetition.cc")

add_executable (EnumeratePermutation "enumerate_permutation.cc")

add_executable (EnumeratePermutationWithRepetition "enumerate_permutation_repetition.cc")

add_executable (EnumerateSubsets "enumerate_subsets.cc")

add_executable (GrayCode "gray_code.cc")

add_executable (HashTable "hash_table.cc")

add_executable (Sort "sort.cc")
